<?xml version="1.0"?>
<package format="3">
  <name>qos_rt_lab</name>
  <version>0.0.1</version>
  <description>QoS round-trip lab</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
